# hutt

./: README.md  pyproject.toml  pytest.ini  setup.py
src/hutt/: __init__.py  mdParser.py
src/hutt/commands/: __init__.py  base.py  bash.py  gdrive.py  info.py  yaml.py
tests/: .gitignore  README.md  test_bash.py  test_run.py  test_yaml.py
tests/test_cli/: test_run.py
