[build-system]
requires = ["setuptools>=42", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "hutt"
version = "0.1"
description = "Helpful Utility for Testing Tutorials"
authors = [
    { name = "Travis Sluka", email = "tsluka@ucar.edu" }
]
readme = "README.md"
requires-python = ">=3.6"
license = { text = "Apache-2.0" }
keywords = ["testing", "tutorials", "utilities"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0",
    "ruamel.yaml>=0.17",
    "gdown>=4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "flake8",
]

[project.scripts]
hutt = "hutt.bin.hutt:cli"

[project.urls]
Homepage = "https://github.com/travissluka/hutt"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools-git-versioning]
enabled = true
